[gd_scene load_steps=5 format=2]

[ext_resource path="res://art/album-spine.png" type="Texture" id=1]
[ext_resource path="res://EmptyAlbum.gd" type="Script" id=2]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ) ],
"loop": true,
"name": "shelf",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 16 )

[node name="EmptyAlbum" type="Area2D"]
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "shelf"
centered = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 4, 16 )
shape = SubResource( 2 )
[connection signal="input_event" from="." to="." method="_on_EmptyAlbum_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_EmptyAlbum_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_EmptyAlbum_mouse_exited"]
